--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@supabase/ssr": "^0.0.10",
     "@supabase/supabase-js": "^2.39.3",
     "@vercel/analytics": "^1.1.1",
+    "@vercel/speed-insights": "^1.0.4",
     "axios": "^1.6.5",
     "crisp-sdk-web": "^1.0.21",
     "eslint": "8.56.0",
