--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@vercel/analytics": "^1.1.1",
     "@vercel/speed-insights": "^1.0.4",
     "axios": "^1.6.5",
+    "better-sse": "^0.10.0",
     "crisp-sdk-web": "^1.0.21",
     "eslint": "8.56.0",
     "eslint-config-next": "14.0.4",
@@ -31,6 +32,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.0.1",
+    "react-loading-icons": "^1.1.0",
     "react-syntax-highlighter": "^15.5.0",
     "react-tooltip": "^5.25.2",
     "stripe": "^14.12.0"
