--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-loading-icons": "^1.1.0",
     "react-syntax-highlighter": "^15.5.0",
     "react-tooltip": "^5.25.2",
-    "stripe": "^14.12.0"
+    "stripe": "^14.12.0",
+    "tailwindcss-animated": "^1.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
