--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "openai": "^4.24.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-loading-icons": "^1.1.0",
