--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "nodemailer": "^6.9.8",
     "openai": "^4.24.7",
     "react": "18.2.0",
+    "react-cookie": "^7.0.2",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hot-toast": "^2.4.1",
